# AnimatedWidgetsPack

./: DEMO.py  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
animated_widgets_pack/: CheckBox.py  ProgressBar.py  ScrollView.py  Switch.py  TextInput.py  ToggleButton.py  __init__.py  animations.py  buttons.py  core.py  sliders.py  utils.py
animated_widgets_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: API.md  how to use.md
examples/: advanced_sliders_example.py  complete_demo.py  complete_demo_2.py  demo_tkinter.py  simple_crm.py  simple_example.py  simple_example_2.py  simple_example_ScrollView_ProgressBar_ToggleButton.py
tests/: __init__.py  test_buttons.py  test_core.py  test_utils.py
